--- a/gallery.html
+++ b/gallery.html
@@ -16,33 +16,17 @@
 <header>
         <nav class="navi">
             <img class="logo" src="img/logo.jpg" alt="">
-            <a class="nav-link link" href="#bemutatkozas">Ki is vagyok?</a>
+            <a class="nav-link link" href="index.html">Ki is vagyok?</a>
             <a class="nav-link link" href="gallery.html">Portfólió</a>
             <a class="nav-link link" href="#kapcsolat">Kapcsolat</a>
         </nav>
 </header>
 
 <main>
-    <section id="bemutatkozas">
-        <br><br><br><br><br>
-        <div class="fo-div">
-            <div class="mellek-div">
-                <img src="img/bemutat_kep.jpg" alt="">
-            </div>
-            <div class="kis-div"></div>
-            <div class="mellek-div">
-                <h2 class="hatter">Bemutatkozas</h2>
-                <p class="bemutatkoz-szoveg" >Szia, Tátrai Levente vagyok, és örömmel köszöntelek a weboldalamon! 17 éves fotós vagyok, aki imádja megörökíteni az élet legszebb pillanatait és történeteit a kamera lencséjén keresztül.</p>
-                <p>Szenvedéllyel és elkötelezettséggel fordulok a fotózás felé, hiszen ez az, ami igazán inspirál és motivál engem. Képeimen keresztül szeretnék egyedi történeteket mesélni, érzelmeket és szépséget közvetíteni, hogy azok, akik megnézik, részesei lehessenek ennek a varázslatos világnak.</p>
-                <p>Fotóimban megtalálhatók az emberek, tájak és pillanatok sokszínűsége, és minden egyes kép mögött ott lapul egy történet, egy érzelem vagy egy lenyűgöző pillanat.</p>
-                <p>Az itt látható fotók nem csupán képek, hanem olyan emlékek, melyeket szeretnék veletek megosztani. Remélem, hogy képeim által ti is részesei lesztek ennek a csodálatos utazásnak, mely a fotózás világába kalauzolja az embereket.</p>
-                <p>Köszönöm, hogy benéztél, és várom, hogy együtt felfedezzük a világ szépségeit a képek varázslatos világában!</p>
-                <br><br>
-                <p style="text-align: right;">Üdvözlettel,</p>
-                <p style="text-align: right;">Tátrai Levente</p>
-            </div>
-        </div>
-    </section> 
+    <section id="gallery">
+  
+    </section>
+    
     <footer>
         <section id="kapcsolat">
             <div class="contact">
@@ -57,7 +41,7 @@
                 <li><a href="https://www.instagram.com/_t.levi0_/" class="fa fa-instagram"></a></li>
                 <li><a href="https://www.youtube.com/@megyer." class="fa fa-youtube"></a></li>
                 <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRmTpJBdXDBfCRkNnRhhKgpQSMzWcPxSNDhMdGHdvBMRJllGHKgZZfmZmpNsHVRRqKdVPBv" class="fa fa-envelope"></a></li>
-            </ul>
+            </ul>            
             <p>&copy; 2023 Tátrai Levente</p>
             </div>
         </section>
