--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <br><br><br><br><br>
         <div class="fo-div">
             <div class="mellek-div">
-                <img class="img" src="img/bemutat_kep.jpg" alt="">
+                <img class="img2" src="img/bemutat_kep.jpg" alt="">
             </div>
             <div class="kis-div"></div>
             <div class="mellek-div">
